--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 2.8.9)
 project("Block Game")
 set(LIBRARY_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-set(GLFW_VERSION      3.1.1)
-set(GLFW_URL          https://github.com/glfw/glfw/archive/${GLFW_VERSION}.tar.gz)
+set(GLFW_NAME         3.1.1)
+set(GLFW_URL          https://github.com/glfw/glfw/archive/${GLFW_NAME}.tar.gz)
 set(GLFW_DIRECTORY    ${LIBRARY_DIRECTORY}/glfw)
 set(GLFW_TGZ          glfw.tgz)
 set(GLFW_TGZ_ABSOLUTE ${GLFW_DIRECTORY}/${GLFW_TGZ})
-set(GLFW_SOURCE       ${GLFW_DIRECTORY}/glfw-${GLFW_VERSION})
+set(GLFW_SOURCE       ${GLFW_DIRECTORY}/glfw-${GLFW_NAME})
 set(GLFW_CMAKE_LISTS  ${GLFW_SOURCE}/CMakeLists.txt)
 set(GLFW_INCLUDE      ${GLFW_SOURCE}/include)
 set(GLFW_BINARY       ${GLFW_DIRECTORY}/bin)
@@ -29,12 +29,12 @@ file(APPEND ${GLFW_CMAKE_LISTS})
 add_subdirectory(${GLFW_SOURCE} ${GLFW_BINARY})
 include_directories(${GLFW_INCLUDE})
 
-set(GLAD_VERSION      c)
-set(GLAD_URL          https://github.com/Dav1dde/glad/archive/${GLAD_VERSION}.tar.gz)
+set(GLAD_NAME         c)
+set(GLAD_URL          https://github.com/Dav1dde/glad/archive/${GLAD_NAME}.tar.gz)
 set(GLAD_DIRECTORY    ${LIBRARY_DIRECTORY}/glad)
 set(GLAD_TGZ          glad.tgz)
 set(GLAD_TGZ_ABSOLUTE ${GLAD_DIRECTORY}/${GLAD_TGZ})
-set(GLAD_SOURCE       ${GLAD_DIRECTORY}/glad-${GLAD_VERSION})
+set(GLAD_SOURCE       ${GLAD_DIRECTORY}/glad-${GLAD_NAME})
 set(GLAD_CMAKE_LISTS  ${GLAD_SOURCE}/CMakeLists.txt)
 set(GLAD_INCLUDE      ${GLAD_SOURCE}/include)
 set(GLAD_BINARY       ${GLAD_DIRECTORY}/bin)
