--- a/src/general/CMakeLists.txt
+++ b/src/general/CMakeLists.txt
@@ -1,11 +1,14 @@
-set_property(GLOBAL APPEND PROPERTY SOURCE_PROPERTY
-  ${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp
+set_property(GLOBAL APPEND PROPERTY HEADERS_PROPERTY
   ${CMAKE_CURRENT_SOURCE_DIR}/camera.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/color_3f.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/color_3f.h
   ${CMAKE_CURRENT_SOURCE_DIR}/matrix.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/vector_2f.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/vector_2f.h
-  ${CMAKE_CURRENT_SOURCE_DIR}/vector_3f.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/vector_3f.h
+)
+
+set_property(GLOBAL APPEND PROPERTY SOURCE_PROPERTY
+  ${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/color_3f.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/vector_2f.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/vector_3f.cpp
 )
