--- a/src/shader/CMakeLists.txt
+++ b/src/shader/CMakeLists.txt
@@ -1,6 +1,9 @@
+set_property(GLOBAL APPEND PROPERTY HEADERS_PROPERTY
+  ${CMAKE_CURRENT_SOURCE_DIR}/fragment.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/vertex.h
+)
+
 set_property(GLOBAL APPEND PROPERTY SOURCE_PROPERTY
   ${CMAKE_CURRENT_SOURCE_DIR}/fragment.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/fragment.h
   ${CMAKE_CURRENT_SOURCE_DIR}/vertex.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/vertex.h
 )
