--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
-set_property(GLOBAL APPEND PROPERTY SOURCE_PROPERTY
-  ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
+add_sources(
+  main.cpp
 )
 
 add_subdirectory(game)
