--- a/src/general/CMakeLists.txt
+++ b/src/general/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_headers(
   camera.h
   color_3f.h
+  math.h
   matrix.h
   vector_2f.h
   vector_3f.h
@@ -9,6 +10,7 @@ add_headers(
 add_sources(
   camera.cpp
   color_3f.cpp
+  math.cpp
   vector_2f.cpp
   vector_3f.cpp
 )
