Replace Vector2F and Vector3F with templated Vector

--- a/src/general/CMakeLists.txt
+++ b/src/general/CMakeLists.txt
@@ -2,13 +2,10 @@ add_headers(
   camera.h
   math.h
   matrix.h
-  vector_2f.h
-  vector_3f.h
+  vector.h
 )
 
 add_sources(
   camera.cpp
   math.cpp
-  vector_2f.cpp
-  vector_3f.cpp
 )
