Simplify add_headers and add_sources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,25 +56,15 @@ add_subdirectory(${GLFW_SOURCE} ${GLFW_BINARY})
 include_directories(${GLFW_INCLUDE})
 
 macro(add_headers)
-  file(RELATIVE_PATH REL_PATH "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
   foreach(HEADER ${ARGN})
-    if(REL_PATH)
-      list(APPEND HEADERS "${REL_PATH}/${HEADER}")
-    else()
-      list(APPEND HEADERS "${HEADER}")
-    endif()
+    list(APPEND HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/${HEADER}.h")
   endforeach()
   set_property(GLOBAL APPEND PROPERTY HEADERS_PROPERTY ${HEADERS})
 endmacro()
 
 macro(add_sources)
-  file(RELATIVE_PATH REL_PATH "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
   foreach(SOURCE ${ARGN})
-    if(REL_PATH)
-      list(APPEND SOURCES "${REL_PATH}/${SOURCE}")
-    else()
-      list(APPEND SOURCES "${SOURCE}")
-    endif()
+    list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cpp")
   endforeach()
   set_property(GLOBAL APPEND PROPERTY SOURCES_PROPERTY ${SOURCES})
 endmacro()
