Use CMake function instead of macro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,12 +50,12 @@ endif()
 add_subdirectory(${GLFW_SOURCE} ${GLFW_BINARY})
 include_directories(${GLFW_INCLUDE})
 
-macro(add_sources)
+function(add_sources)
   foreach(SOURCE ${ARGN})
     list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cpp")
   endforeach()
   set_property(GLOBAL APPEND PROPERTY SOURCES_PROPERTY ${SOURCES})
-endmacro()
+endfunction()
 
 add_subdirectory(src)
 include_directories(src)
