Move add_sources to src/CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,10 @@
+function(add_sources)
+  foreach(SOURCE ${ARGN})
+    list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cpp")
+  endforeach()
+  set_property(GLOBAL APPEND PROPERTY SOURCES_PROPERTY ${SOURCES})
+endfunction()
+
 add_sources(
   main
 )
