Convert text files to C++ strings using CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,20 @@ add_cmake_dependency(
 add_subdirectory(src)
 include_directories(src)
 
+get_property(STRING_PATHS GLOBAL PROPERTY STRING_PATHS_PROPERTY)
+foreach(STRING_PATH ${STRING_PATHS})
+  add_custom_command(
+    OUTPUT ${CMAKE_BINARY_DIR}/${STRING_PATH}.txt
+    COMMAND ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${STRING_PATH} -P add_string.cmake
+    DEPENDS ${CMAKE_SOURCE_DIR}/${STRING_PATH}
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+  )
+  list(APPEND STRINGS_DEPENDS ${CMAKE_BINARY_DIR}/${STRING_PATH}.txt)
+endforeach()
+add_custom_target(strings DEPENDS ${STRINGS_DEPENDS})
+include_directories(${CMAKE_BINARY_DIR}/src)
+
 get_property(SOURCES GLOBAL PROPERTY SOURCES_PROPERTY)
 add_executable(block_game ${SOURCES})
+add_dependencies(block_game strings)
 target_link_libraries(block_game glad glfw ${GLFW_LIBRARIES})
