--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ get_property(STRING_PATHS GLOBAL PROPERTY STRING_PATHS_PROPERTY)
 foreach(STRING_PATH ${STRING_PATHS})
   add_custom_command(
     OUTPUT ${CMAKE_BINARY_DIR}/${STRING_PATH}.txt
-    COMMAND ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${STRING_PATH} -P add_string.cmake
+    COMMAND ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${STRING_PATH} -P BuildString.cmake
     DEPENDS ${CMAKE_SOURCE_DIR}/${STRING_PATH}
 	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
   )
