Improve readability in CMake scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,35 +4,39 @@ project("Block Game")
 set(LIBRARY_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 include(CMakeParseArguments)
 function(add_cmake_dependency)
+  # ACD stands for add_cmake_dependency
   set(ACD_ONE_VALUE_KEYWORDS
     NAME
-    URL
-    SOURCE
-    INCLUDE
+    URL # to TGZ
+    SOURCE # name the unzipped source directory will have
+    INCLUDE # path in source directory to include directory
   )
   cmake_parse_arguments(ACD "" "${ACD_ONE_VALUE_KEYWORDS}" "" ${ARGN})
-
-  set(ACD_DIRECTORY ${LIBRARY_DIRECTORY}/${ACD_NAME})
+  set(ACD_DIRECTORY_ABSOLUTE ${LIBRARY_DIRECTORY}/${ACD_NAME})
   set(ACD_TGZ ${ACD_NAME}.tgz)
-  set(ACD_TGZ_ABSOLUTE ${ACD_DIRECTORY}/${ACD_TGZ})
-  set(ACD_SOURCE_ABSOLUTE ${ACD_DIRECTORY}/${ACD_SOURCE})
-  set(ACD_CMAKE_LISTS ${ACD_SOURCE_ABSOLUTE}/CMakeLists.txt)
+  set(ACD_TGZ_ABSOLUTE ${ACD_DIRECTORY_ABSOLUTE}/${ACD_TGZ})
+  set(ACD_SOURCE_ABSOLUTE ${ACD_DIRECTORY_ABSOLUTE}/${ACD_SOURCE})
+  set(ACD_CMAKE_LISTS_ABSOLUTE ${ACD_SOURCE_ABSOLUTE}/CMakeLists.txt)
   set(ACD_INCLUDE_ABSOLUTE ${ACD_SOURCE_ABSOLUTE}/${ACD_INCLUDE})
-  set(ACD_BINARY ${ACD_DIRECTORY}/bin)
+  set(ACD_BINARY_ABSOLUTE ${ACD_DIRECTORY_ABSOLUTE}/bin)
 
-  if(NOT EXISTS ${ACD_CMAKE_LISTS})
+  if(NOT EXISTS ${ACD_CMAKE_LISTS_ABSOLUTE})
     message(STATUS "Downloading ${ACD_URL}")
     file(DOWNLOAD ${ACD_URL} ${ACD_TGZ_ABSOLUTE})
-    message(STATUS "Opening ${ACD_TGZ_ABSOLUTE}")
+
+    message(STATUS "Unzipping ${ACD_TGZ_ABSOLUTE}")
     execute_process(
       COMMAND ${CMAKE_COMMAND} -E tar xzf ${ACD_TGZ}
-      WORKING_DIRECTORY ${ACD_DIRECTORY}
+      WORKING_DIRECTORY ${ACD_DIRECTORY_ABSOLUTE}
     )
   endif()
 
-  file(APPEND ${ACD_CMAKE_LISTS})
-  add_subdirectory(${ACD_SOURCE_ABSOLUTE} ${ACD_BINARY})
   include_directories(${ACD_INCLUDE_ABSOLUTE})
+
+  # cause CMake to automatically rerun when non-CMake dependency is deleted
+  file(APPEND ${ACD_CMAKE_LISTS_ABSOLUTE})
+
+  add_subdirectory(${ACD_SOURCE_ABSOLUTE} ${ACD_BINARY_ABSOLUTE})
 endfunction()
 
 add_cmake_dependency(
@@ -41,7 +45,9 @@ add_cmake_dependency(
   SOURCE glad-c
   INCLUDE include
 )
-add_library(glad ${LIBRARY_DIRECTORY}/glad/glad-c/src/glad.c)
+add_library(glad
+  ${LIBRARY_DIRECTORY}/glad/glad-c/src/glad.c
+)
 
 add_cmake_dependency(
   NAME glfw
@@ -57,8 +63,9 @@ add_cmake_dependency(
   INCLUDE include
 )
 
-add_subdirectory(res)
+include_directories(include)
 
+add_subdirectory(res)
 get_property(STRING_PATHS GLOBAL PROPERTY STRING_PATHS_PROPERTY)
 foreach(STRING_PATH ${STRING_PATHS})
   add_custom_command(
@@ -73,8 +80,6 @@ add_custom_target(strings DEPENDS ${STRINGS_DEPENDS})
 include_directories(${CMAKE_BINARY_DIR}/res)
 
 add_subdirectory(src)
-include_directories(include)
-
 get_property(SOURCES GLOBAL PROPERTY SOURCES_PROPERTY)
 add_executable(block_game ${SOURCES})
 add_dependencies(block_game strings)
