--- a/res/CMakeLists.txt
+++ b/res/CMakeLists.txt
@@ -1,6 +1,6 @@
 function(add_strings)
-  foreach(STRING_FILE ${ARGN})
-    file(RELATIVE_PATH STRING_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/${STRING_FILE})
+  foreach(STRING_NAME ${ARGN})
+    file(RELATIVE_PATH STRING_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/${STRING_NAME})
     list(APPEND STRING_PATHS ${STRING_PATH})
   endforeach()
   set_property(GLOBAL APPEND PROPERTY STRING_PATHS_PROPERTY ${STRING_PATHS})
