Use lighTest.cmake functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,14 +97,5 @@ target_link_libraries(block_game_lib
 add_executable(block_game src/main.cc)
 target_link_libraries(block_game block_game_lib)
 
-set_property(GLOBAL PROPERTY USE_FOLDERS ON)
-enable_testing()
-add_subdirectory(test)
-get_property(TESTS GLOBAL PROPERTY TESTS_PROPERTY)
-foreach(TEST ${TESTS})
-  string(REPLACE / _ TEST_ID ${TEST})
-  add_executable(${TEST_ID} test/${TEST}_test.cc)
-  target_link_libraries(${TEST_ID} block_game_lib lightest)
-  set_target_properties(${TEST_ID} PROPERTIES FOLDER test)
-  add_test(${TEST} ${TEST_ID})
-endforeach()
+include(${LIBRARY_DIRECTORY}/lightest/lightest-master/lighTest.cmake)
+lightest(block_game_lib)
